# rust-testrunner

./: .gitignore  Cargo.toml  Makefile  README.md  template.yaml
src/: error.rs  lib.rs  main.rs  model.rs
src/domain/: mod.rs  testrun.rs
src/entrypoints/lambda/: apigateway.rs
src/entrypoints/lambda/dynamodb/: mod.rs  model.rs
src/events/: mod.rs
src/events/eventbridge/: ext.rs  mod.rs
src/store/: mod.rs
src/store/dynamodb/: ext.rs  mod.rs
src/utils/: mod.rs  zip.rs
