[package]
author = "preprocess.sh"
name = "rust-testrunner-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-smithy-client = { version = "0.54.4", features = ["test-util"] }
aws-smithy-http = "0.54.4"
base64 = "0.21.0"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", features = ["chrono"] }
http = "0.2.9"
lambda_http = "0.7"
lambda_runtime = "0.7"
serde = "1.0.152"
serde_json = "1.0.93"
serde_with = "2.2.0"
tempfile = "3.3.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
zip = "0.6.4"

